@@ -1,5 +1,12 @@
 2006-09-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
+	* src/Makefile.am (CLEANFILES, dist-hook): Commented out, to
+	reduce number of user reports from people without lex.
+
+	* configure.in: Change from AC_PROG_LEX to AM_PROG_LEX.
+
+	* src/Makefile.am (cscope_SOURCES): Added alloc.h.  Reindented.
+
 	* src/invlib.c (invnewterm): Correct loop test to account for
 	maxback being unsigned (SF bug #1559495).
 
